commit depuis intelj. Mise en place MVC

--- a/src/main/resources/com/example/myheadachediary/SceneBuilder_Migraine.css
+++ b/src/main/resources/com/example/myheadachediary/SceneBuilder_Migraine.css
@@ -23,6 +23,9 @@
     -fx-text-fill: lightgray;
     -fx-font-weight: bold;
 }
+.table-column {
+  -fx-alignment: CENTER;
+}
 
 #lblColorProperties{
   -fx-text-fill: -fx-accent;
